# file-explorer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: main.rs
